# Homunculus

./: .env.example  .gitignore  COMPLETION_SUMMARY.md  DEPLOY.md  INSTALL.md  INTEGRATION_STATUS.md  OPERATIONS.md  README.md  READY.md  RESTART.sh  START.sh.example  STATUS.sh  pyproject.toml
.github/workflows/: ci.yml
config/: homunculus.example.json
deploy/: Dockerfile  docker-compose.yml
deploy/systemd/: homunculus.service
docs/: OPENCLAW_INTEGRATION.md  QUICKSTART.md  SECURITY_ISOLATION.md  homunculus-jira-import-guide.md  homunculus-jira-import.csv  homunculus-prd.md  homunculus-roadmap.csv  homunculus-tasks-phase1.csv  homunculus-ticket-BE-05.csv  homunculus-worktree-wave-plan.csv  v2_enhance.md
docs/ops/: ci-pipeline.md  runtime-packaging.md  secrets-contract.md
examples/: MODEL_SELECTION.md
examples/kovach/: character-card.json  config-opus.json  config.json.example
homunculus/: __init__.py
homunculus/memory/: __init__.py  qmd_adapter.py
scripts/: bootstrap-agents.py
scripts/ci/: install-deps.sh  run-integration-smoke.sh  run-lint.sh  run-unit-tests.sh
tests/: test_agent_bootstrap.py  test_anthropic_adapter.py  test_character_card.py  test_hotswap.py  test_llm_client.py  test_llm_service.py  test_memory_extractor.py  test_mention_listener.py  test_message_handler.py  test_model_config.py  test_observability_metrics.py  test_prompt_builder.py  test_qmd_adapter.py  test_qmd_scheduler.py  test_recent_messages.py  test_reply_formatter.py  test_response_pipeline.py  test_runtime.py  test_settings.py  test_skill_excerpts.py  test_slash_commands.py
(+46 files in other folders)
