[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homunculus"
version = "0.1.0"
description = "Homunculus Discord NPC runtime"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "discord.py>=2.4,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
