[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homunculus"
version = "0.1.0"
description = "Homunculus TTRPG NPC runtime foundation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
homunculus = "homunculus.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
homunculus = ["skills/excerpts/*.md"]
